<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="weight_text_view">000</string>
    <string name="miles_ran_text_view">1mi</string>
    <string name="calories_burned_text_view">00.0</string>
    <string name="bmi_text_view">00</string>
    <string name="weight_label">Weight:</string>
    <string name="miles_ran_label">Miles Ran:</string>
    <string name="calories_burned_label">Calories Burned:</string>
    <string name="height_label">Height:</string>
    <string name="bmi_label">BMI:</string>
    <string name="name_label">Name:</string>
    <string-array name="feet_spinner">
        <item name="3">1</item>
        <item name="4">1</item>
        <item name="5">1</item>
        <item name="6">1</item>
        <item name="7">1</item>
    </string-array>
    <string-array name="inches_spinner">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
        <item name="11">11</item>
    </string-array>
</resources>
