<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.richard.burnedcaloriescalculator.MainActivity">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_label"
        android:id="@+id/weightLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextView.Label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_ran_label"
        android:id="@+id/milesRanLabel"
        android:layout_below="@+id/weightLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextView.Label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_burned_label"
        android:id="@+id/caloriesBurnedLabel"
        android:layout_below="@+id/milesRanLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextView.Label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_label"
        android:id="@+id/heightLabel"
        android:layout_below="@+id/caloriesBurnedLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextView.Label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_label"
        android:id="@+id/bmiLabel"
        android:layout_below="@+id/heightLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextView.Label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:id="@+id/nameLabel"
        android:layout_below="@+id/bmiLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextView.Label" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/weightEditText"
        android:layout_above="@+id/milesRanLabel"
        android:layout_toRightOf="@+id/weightLabel"
        android:layout_toEndOf="@+id/weightLabel"
        android:text="@string/weight_text_view"
        style="@style/TextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_ran_text_view"
        android:id="@+id/milesRanTextView"
        android:layout_above="@+id/caloriesBurnedLabel"
        android:layout_toRightOf="@+id/milesRanLabel"
        android:layout_toEndOf="@+id/milesRanLabel"
        android:layout_alignTop="@+id/milesRanSeekBar"
        style="@style/TextView" />

    <SeekBar
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/milesRanSeekBar"
        android:layout_above="@+id/caloriesBurnedLabel"
        android:layout_toRightOf="@+id/milesRanTextView"
        android:layout_toEndOf="@+id/milesRanTextView"
        android:max="10"
        android:progress="1"
        android:indeterminate="false"
        android:layout_alignTop="@+id/milesRanLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_burned_text_view"
        android:id="@+id/caloriesBurnedTextView"
        android:layout_alignTop="@+id/caloriesBurnedLabel"
        android:layout_toRightOf="@+id/caloriesBurnedLabel"
        android:layout_toEndOf="@+id/caloriesBurnedLabel"
        style="@style/TextView" />

    <Spinner
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/feetSpinner"
        android:layout_alignTop="@+id/heightLabel"
        android:layout_toRightOf="@+id/heightLabel"
        android:padding="10dp"
        android:layout_above="@+id/bmiLabel" />

    <Spinner
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/inchesSpinner"
        android:layout_below="@+id/caloriesBurnedLabel"
        android:layout_toRightOf="@+id/feetSpinner"
        android:layout_toEndOf="@+id/feetSpinner"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        android:layout_above="@+id/bmiLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_text_view"
        android:id="@+id/bmiTextView"
        android:layout_toRightOf="@+id/bmiLabel"
        android:layout_toEndOf="@+id/bmiLabel"
        android:layout_alignTop="@+id/bmiLabel"
        style="@style/TextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Jane Doe"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:layout_alignTop="@+id/nameLabel"
        android:layout_toRightOf="@+id/nameLabel"
        android:layout_toEndOf="@+id/nameLabel"
        android:layout_alignBottom="@+id/nameLabel" />

    </RelativeLayout>

</ScrollView>
